--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p>Packs opened: <span id="total_packs_opened"></span></p>
     <button id="open_pack">Open a pack</button>
 
-    <div id="collection">
+    <div id="collection" class="collection_wrapper">
 
     </div>
     <script type="module" src="scripts/main.js"></script>
