--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
     <button id="save">Speichern</button>
     <button id="load">Laden</button>
     <button id="delete">Löschen</button>
+    <button id="toggle_collection">Collection Anzeigen</button>
     <p>Packs opened: <span id="total_packs_opened"></span></p>
-    <button id="open_pack">Open a pack</button>
+    <p>Money: <span id="total_money"></span></p>
+    <button id="open_pack">Open a pack (10€)</button>
+    <button id="sell_all">Sell All</button>
 
     <div id="collection" class="collection_wrapper">
 
